SecurityConfig.java minor changes